# bombermania

./: .gitignore  LICENSE.md  README.md  docker-compose.yml
client/: Cargo.toml
client/src/: external.rs  game.rs  game_state.rs  geometry.rs  lib.rs
client/src/game/: component.rs  game_state.rs  mod.rs  system.rs
client/src/game/system/: collision.rs  input.rs  mod.rs
client/web/: index.html
client2/: Cargo.toml  README.md
client2/src/: main.rs
client2/static/: index.html
gameserver/: Cargo.toml  README.md
gameserver/src/: main.rs
gameserver/src/ecs/: entity.rs  event.rs
gameserver/src/engine/: mod.rs
gameserver/src/engine/components/: identity.rs  mod.rs  physics.rs
gameserver/src/engine/context/: mod.rs
gameserver/src/engine/entities/: mod.rs
gameserver/src/engine/interface/: adapters.rs  messages.rs  mod.rs
gameserver/src/engine/resources/: deltatime.rs  input.rs  mod.rs
gameserver/src/engine/systems/: physics.rs
server/: Cargo.toml  Rocket.toml
server/src/: main.rs
worldgen/src/: main.py
