[package]
name = "gameserver"
version = "0.1.0"
authors = ["radiand <radiand@protonmail.com>"]

[dependencies]
futures = "0.1"
log = "0.4"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
simplelog = "~0.5.0"
snowflake = "1.2"
specs = "0.14.1"
specs-derive = "0.3.0"
tokio = "0.1"
websocket = "0.22.2"
